--- a/zh/mkdocs.yml
+++ b/zh/mkdocs.yml
@@ -69,9 +69,8 @@ nav:
       - Truffle: integration/tool-truffle.md
     - 桌面版钱包: integration/gatechain-wallet.md
   - FAQ:
+    - 常见问题: faq/faq.md
     - 开发组邮箱: faq/README.md
-
-
 
 
 
