--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -68,7 +68,7 @@ nav:
       - Truffle: integration/tool-truffle.md
     - Wallet: integration/gatechain-wallet.md
   - FAQ:
-    - Developers Email: faq/README.md
+    - More Help: faq/README.md
 
 
 
