--- a/zh/mkdocs.yml
+++ b/zh/mkdocs.yml
@@ -70,7 +70,7 @@ nav:
     - 桌面版钱包: integration/gatechain-wallet.md
   - FAQ:
     - 常见问题: faq/faq.md
-    - 开发组邮箱: faq/README.md
+    - 更多帮助: faq/README.md
 
 
 
