--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -62,6 +62,7 @@ nav:
     - Exchange: integration/gatechain-platform.md
     - GateSwap: integration/gateswap.md
     - GateBridge: integration/gatebridge.md
+    - Issue Token: integration/issuetoken.md
     - Tools:
       - MetaMask: integration/tool-metamask.md
       - Remix: integration/tool-remix.md
