--- a/zh/mkdocs.yml
+++ b/zh/mkdocs.yml
@@ -62,10 +62,12 @@ nav:
     - RPC节点: integration/rpc-node-list.md
     - 交易平台集成文档: integration/gatechain-platform.md
     - GateSwap: integration/gateswap.md
-    ##- GateBridge: integration/gatebridge.md
-    - GateBridge: integration/gatebridge.md
+    - GateBridge:
+      - 核心原理: integration/gatebridge-principles.md
+      - 使用说明: integration/gatebridge-use.md
     - Issue Token: integration/issuetoken.md
     - Tools:
+      - 介绍: integration/tool.md
       - MetaMask: integration/tool-metamask.md
       - Remix: integration/tool-remix.md
       - Truffle: integration/tool-truffle.md
