--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -60,7 +60,7 @@ nav:
     - Web3JS: https://web3js.readthedocs.io/en/v1.2.11/
   - Integration:
     - RPC node: integration/rpc-node-list.md
-    - Hipo Pos: integation/hipo-pos.md	
+    - Hipo Pos: integration/hipo-pos.md	
     - Exchange: integration/gatechain-platform.md
     - GateSwap: integration/gateswap.md
     - GateBridge: 
