--- a/zh/mkdocs.yml
+++ b/zh/mkdocs.yml
@@ -62,6 +62,7 @@ nav:
   - 集成:
     - RPC节点: integration/rpc-node-list.md
     - 交易平台集成文档: integration/gatechain-platform.md
+    - GateChain Endpoints说明: integration/endpoints.md
     - Hipo Pos挖矿: integration/hipo-pos.md
     - GateSwap: integration/gateswap.md
     - GateBridge:
