--- a/en/mkdocs.yml
+++ b/en/mkdocs.yml
@@ -62,12 +62,17 @@ nav:
     - RPC node: integration/rpc-node-list.md
     - Exchange: integration/gatechain-platform.md
     - GateChain Endpoints: integration/endpoints.md
-    - Hipo Pos: integration/hipo-pos.md
+    - Hipo PoS: integration/hipo-pos.md
+    - Deploy smart contracts in GateChain: integration/smart-contract.md
     - GateSwap: integration/gateswap.md
     - GateBridge: 
       - Core principles: integration/gatebridge-principles.md
       - How to use: integration/gatebridge-use.md
     - Issue Token: integration/issuetoken.md
+    - NFT:
+      - Issue NFT: integration/nft.md
+      - Check your NFT on the MetaMask mobile: integration/metamask-mobile.md
+      - View NFT in GateScan: integration/gatescan.md
     - Tools:
       - Introduction: integration/tool.md
       - MetaMask: integration/tool-metamask.md
